# mddedupe

./: .gitignore  .mdbump  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  readme.md  rustc_wrapper.sh
docs/: usage.md
src/: main.rs
tests/: cli.rs
wrk_docs/: 2025.11.05  2025.11.05 - CC - Coverage Improvement Plan.md  2025.11.05 - CC - Coverage Review.md  2025.11.05 - CR - mddedupe.md  2025.11.05 - PLN - mddedupe hardening.md  2025.11.06 - CC - Coverage Improvement Plan.md  2025.11.06 - CC - Coverage Review.md  2025.11.06 - CR - Comprehensive Code Review.md  2025.11.06 - CR Plan - Comprehensive Review.md  2025.11.06 - Comprehensive Architecture Analysis.md  2025.11.21 - CR - Full Repo Review.md  2025.11.21 - CR Plan - Full Repo Review.md  2025.11.21 - HLD - Symlink Safety & Failure Surfacing.md  2025.11.21 - PLN - Symlink Safety & Failure Surfacing.md  2025.12.01 - CR - Comprehensive Code Review.md  2025.12.01 - CR Plan - Comprehensive Code Review.md  2025.12.20 - CC - Code Coverage Analysis Report.md  2025.12.20 - CC - Coverage Improvement Plan.md  2025.12.20 - CC - Final Coverage Report.md  2026.01.09 - CC - Coverage Analysis.md  2026.01.09 - CC - Coverage Improvement Plan.md  2026.01.09 - CC - Final Coverage Report.md  2026.05.24 - HLD - Configurable Survivor Selection.md  2026.05.24 - HLD - Multi-Drive Duplicate Scanning.md  2026.05.25 - CR - Stage 1 Selection Engine.md  2026.05.25 - CR - Stage 2 Accounting and Collapse.md  2026.05.25 - CR - Stage 3 Config CLI and Flip.md  2026.05.25 - CR - Stage 3 Fixes Re-review.md  (+8 more)
(+4 files in other folders)
