[package]
name = "mddedupe"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
rayon = "1.7"
sha2 = "0.10"
walkdir = "2.3"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
tempfile = "3.5"
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
trash = "3"
