[package]
name = "mddedupe"
version = "1.2.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
globset = "0.4"
rayon = "1.7"
sha2 = "0.10"
walkdir = "2.3"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
filetime = "0.2"
predicates = "3.1"
proptest = "1"
tempfile = "3.5"
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
trash = "3"
